Fix DCHECK failure on bots when registry key can't be opened successfully.

I don't know why this happens, but we should have this sanity check anyway.

BUG=592676
TEST=none
TBR=estade

Review URL: https://codereview.chromium.org/1822263002

Cr-Commit-Position: refs/heads/master@{#382825}

Former-commit-id: 6d73369e32f4cb2dbeec4d8080c377f545ff8640